# Neural_Synthesis

./: main  main.c  meson.build
